remove all references to NMS

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: Female-Gender-Mod-Plugin
 version: '${project.version}'
 main: dbrighthd.wildfiregendermodplugin.GenderPlugin
 api-version: 1.20
+authors: [ 'dbrighthd', 'Stigstille', 'winnpixie' ]
