--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,12 +1,10 @@
 # Configuration version -- DO NOT CHANGE!
-global:
-  config-version: 0.1
+config-version: 0.2
 
 # Configuration relating to Wildfire's Female Gender Mod
 mod:
   # The packet format used for mod data reads/writes
-  # 2 supports versions 2.8.1 to 3.0.1
-  # 3 supports versions 3.1.0 to 4.0.0
-  # 4 supports versions 4.0.1 to [T.B.D.]
+  # For a list of protocols and their supported mod versions, refer to https://modrinth.com/plugin/female-gender-spigot
+  # -1 will use the newest known protocol, so that you won't need to change this every mod and plugin update.
   # Undocumented protocols will cause this plugin to disable itself on launch.
-  protocol: 4
+  protocol: -1
