--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Female-Gender-Mod-Plugin
 version: '${project.version}'
-main: dbrighthd.wildfiregendermodplugin.GenderPlugin
+main: dbrighthd.wildfiregendermodplugin.GenderModPlugin
 api-version: 1.20
 authors: [ 'dbrighthd', 'Stigstille', 'winnpixie' ]
