port from maven to gradle platform from spigot to folia

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,6 @@
 name: Female-Gender-Mod-Plugin
 version: '${project.version}'
 main: dbrighthd.wildfiregendermodplugin.GenderModPlugin
-api-version: 1.20
-authors: [ 'dbrighthd', 'Stigstille', 'winnpixie' ]
+api-version: '1.21'
+authors: [ 'dbrighthd', 'Stigstille', 'winnpixie', 'UnFamousSoul' ]
+folia-supported: true
